--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
           <p><a href="https://hovershock.com/" target="_blank">hovershock.com</a></p>
           <p><a href="https://twitter.com/canplay_dev" target="_blank">HoverShock's Twitter</a></p>
           <p><a href="https://youtu.be/Wwi3b9mBPr8" target="_blank">HoverShock's Trailer</a></p>
-          <p>This is a project that I started and it's still a work in progress. My responsabilities for this project include game design,
-          3d modelling as well as all the art pipeline.</p>
+          <p>This is a project that I started and it's still a work in progress. My responsibilities for this project include game design, 
+            gameplay programming, systems programming, and everything art related.</p>
           
           <p>Awards:</p>
           <ul>
@@ -342,7 +342,7 @@
           <p><a href="https://youtu.be/_0VlPXcW8fI" target="_blank">Raccoon Escape's Trailer</a></p>
           <p><a href="https://vimeo.com/169073540" target="_blank">Raccoon Escape 2d Animation Snippet</a></p>
           <p>This game started as a personal project in the Summer of 2014. After its prototype acquired a great acceptance from multiple players,
-           this game took a more serious approach to its development. This project was mostly a solo endeavor, where I my responsibilities included
+           this game took a more serious approach to its development. This project was mostly a solo endeavor, where my responsibilities included
             most areas of game development only excluding its sound design.</p>
 
           <p>Awards:</p>
@@ -499,7 +499,7 @@
 
           <p>This project is a VR experience that allows its user to see how Alter's castle looked like in its prime.
            This project was created for the municipality of Alter do Chão and recreates its castle as it was in the XVI century. </p> 
-          <p>In this project, I did the Unreal Engine 4 integration as well as some 3d modeling and materials, VR logic and optimizations. </p>
+          <p>For this project, I did the Unreal Engine 4 integration, VR logic and optimizations, as well as some 3d modeling and materials. </p>
 
           <div class="tags">
             <span class="tag">ue4</span>
