--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <p>Raccoon Escape is an endless runner envisioned for mobile platforms. In this game you need to help the Raccoon escape the fiery
            pits where he is imprisoned! Connect the gears that will pull him up while avoiding various enemies. This is a fast paced endless
             runner that requires all your attention and skill to succeed!</p> 
-          <p><a href="https://play.google.com/store/apps/details?id=com.crossinganswers.canplay.raccoonescape" target="_blank">Raccoon Escape on Google Play</a></p>
+          <p><a href="https://apps.apple.com/us/app/raccoon-escape/id986891391" target="_blank">Raccoon Escape on the App Store</a></p>
           <p><a href="https://youtu.be/_0VlPXcW8fI" target="_blank">Raccoon Escape's Trailer</a></p>
           <p><a href="https://vimeo.com/169073540" target="_blank">Raccoon Escape 2d Animation Snippet</a></p>
           <p>This game started as a personal project in the Summer of 2014. After its prototype acquired a great acceptance from multiple players,
