--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@
       <div class="card">
         <div class="card-content">
             <div class="content">
-                Hi!</br>
-                <br>I'm a Portuguese game developer with professional game industry experience. I'm currently working at Saber Interactive Porto.<br>
-                <br>I have experience in multiple areas of game development and have been working in both pc and console games. I started as a 3d artist well before joining the games development
+                <p>Hi! I'm a Portuguese game developer with professional game industry experience. I'm currently working at Saber Interactive Porto.</p>
+                <p>I have experience in multiple areas of game development and have been working in both pc and console games. I started as a 3d artist well before joining the games development
                 industry. Since then, I've wandered into more technical tasks, working on game design and programming, but especially in technical art. Those are roles that I've performed, in some
-                form or another, in every project I was part of. My real passion became the combination of art and programming. As a technical artist is where I feel I can do my best work..</br>
-                <br>The takeaway is that I have a passion for game development and working deep within game engines like Unreal Engine 4, which I've worked with for the last eight years.</br>
+                form or another, in every project I was part of. My real passion became the combination of art and programming. As a technical artist is where I feel I can do my best work..</p>
+                <p>The takeaway is that I have a passion for game development and working deep within game engines like Unreal Engine 4, which I've worked with for the last eight years.</p>
             </div>
         </div>
       </div>
